# ZCalendar

./: .eslintrc.js  .gitignore  .prettierignore  .versionrc  CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
scripts/: cargo-updater.cjs  settings-view-updater.cjs  tauri-updater.cjs  update-version.cjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_create_calendars_and_events_table.sql
src-tauri/src/: config.rs  lib.rs  main.rs  reminder_manager.rs
src-tauri/src/models/: calendar.rs  event.rs  reminder.rs
src-tauri/src/services/: calendar_service.rs  event_service.rs  ical_service.rs  notification_service.rs
src-tauri/src/storage/: database.rs
src/components/: CustomDateTime.vue  CustomSelect.vue  LoadingBar.vue
src/components/Calendar/: CalendarNavigation.vue  CalendarView.vue  DayView.vue  MonthView.vue  WeekView.vue
src/components/Event/: EventCard.vue  EventDetail.vue  EventEditor.vue
src/components/Notification/: NotificationManager.vue
src/composables/: useCalendar.ts  useEvents.ts  useLoading.ts  useNotifications.ts
src/router/: index.ts
src/services/: aiService.ts  calendarService.ts  eventService.ts  notificationService.ts
src/stores/: aiStore.ts  calendarStore.ts  eventStore.ts
src/styles/: color.css  dark-color.css
src/types/: ai.ts  calendar.ts  event.ts  tauri.ts
src/utils/: calendarUtils.ts  dateUtils.ts  themeManager.ts
src/views/: AIChatView.vue  CalendarView.vue  EventView.vue  SettingsView.vue
