[package]
name = "zcalendar"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zcalendar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 数据库相关
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "macros"] }
tokio = { version = "1", features = ["full"] }
# 日期时间处理
chrono = { version = "0.4", features = ["serde"] }
# UUID生成
uuid = { version = "1.0", features = ["v4", "fast-rng", "serde"] }
# iCalendar处理
ical = "0.8.0"
# 错误处理
thiserror = "2"
# 配置管理
config = "0.14"
# 日志
log = "0.4"
env_logger = "0.11"

